--- a/src/css/Components.css
+++ b/src/css/Components.css
@@ -1,4 +1,4 @@
-#cover-container {
+#cover_container {
   height: 100vh;
   min-height: 500px;
   max-height: 100vh;
@@ -16,7 +16,7 @@ canvas {
   vertical-align: middle;
 }
 
-.scroll-anchor {
+.scroll_anchor {
   display: block;
   min-height: 100px;
 }
@@ -25,6 +25,7 @@ canvas {
   height: 4px;
   display: block;
   background-color: #0099ff;
+  max-width: 50px;
 }
 
 #toolbar .nav-link {
@@ -75,16 +76,16 @@ canvas {
   left: 40%;
 }
 
-.thumbnail {
+.card_thumbnail {
   position: relative;
   overflow: hidden;
-  min-height: 140px;
-  height: auto;
+  max-height: 258px;
+  height: 100%;
   width: 100%;
   cursor: pointer;
 }
 
-.thumbnail .caption {
+.card_thumbnail .caption {
   position: absolute;
   opacity: 0%;
   left: 0;
@@ -97,6 +98,6 @@ canvas {
   transition: all 0.3s ease-in-out;
 }
 
-.thumbnail:hover .caption {
+.card_thumbnail:hover .caption {
   opacity: 0.95;
 }/*# sourceMappingURL=Components.css.map */
