--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -70,6 +70,7 @@ $navbar-nav-link-padding-x: 0;
 $btn-border-width: 0;
 $btn-focus-width: 0;
 $btn-box-shadow: 0;
+$btn-focus-box-shadow: 0;
 
 //Tooltip
 $tooltip-arrow-color: $primary;
