imagekit imp, pkg fixes, css changes

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -182,13 +182,12 @@ canvas {
 .card_thumbnail {
   position: relative;
   overflow: hidden;
-  max-height: 258px;
   height: 100%;
   width: 100%;
   cursor: pointer;
 }
 
-.card_thumbnail .caption {
+.card_thumbnail .card_caption {
   position: absolute;
   opacity: 0%;
   left: 0;
@@ -201,7 +200,7 @@ canvas {
   transition: all 0.3s ease-in-out;
 }
 
-.card_thumbnail:hover .caption {
+.card_thumbnail:hover .card_caption {
   opacity: 0.95;
 }
 
@@ -11760,5 +11759,15 @@ textarea.form-control-lg {
   }
   .d-print-none {
     display: none !important;
+  }
+}
+@media (max-width: 575.98px) {
+  #feedback_slider .carousel-caption {
+    position: relative;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  #feedback_slider .carousel-caption {
+    position: relative;
   }
 }/*# sourceMappingURL=App.css.map */
